--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TravelWeather</string>
+    <string name="app_name">出行天气</string>
     <string name="deg">°</string>
     <string name="forecast">预报</string>
     <string name="to">~</string>
