--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="suggestion">生活建议</string>
     <string name="percent">%</string>
     <string name="pm10">PM10</string>
+    <string name="autoLocate">自动定位</string>
 </resources>
